# x

./: 013635e3-async.62c93614.js  013635e3-async.62c93614.js.map  08179a04-async.1c6a44d6.js  08179a04-async.1c6a44d6.js.map  0c727950-async.14c19995.js  0c727950-async.14c19995.js.map  10684a4a-async.b08cf3f4.js  10684a4a-async.b08cf3f4.js.map  10f26853-async.60673428.js  10f26853-async.60673428.js.map  1116489c-async.97c32ad6.js  1116489c-async.97c32ad6.js.map  12641128-async.08c67b1f.js  12641128-async.08c67b1f.js.map  14e3deb5-async.7f7a84ab.js  14e3deb5-async.7f7a84ab.js.map  14e5e410-async.d4f9810a.js  14e5e410-async.d4f9810a.js.map  1f700706-async.c4365635.js  1f700706-async.c4365635.js.map  22d5b106-async.4bf70ac9.js  22d5b106-async.4bf70ac9.js.map  25deb413-async.81fb2173.js  25deb413-async.81fb2173.js.map  282cdc72-async.28e0fe5c.js  282cdc72-async.28e0fe5c.js.map  2f637dca-async.dbde458f.js  2f637dca-async.dbde458f.js.map  317ffed1-async.7ad42111.js  317ffed1-async.7ad42111.js.map  3215c349-async.ead09608.js  3215c349-async.ead09608.js.map  348cb242-async.2bd89a9c.js  348cb242-async.2bd89a9c.js.map  35e7c600-async.ba11da52.js  35e7c600-async.ba11da52.js.map  37d10f85-async.75151f62.js  37d10f85-async.75151f62.js.map  404.html  434a0265-worker.1b6b445c.js  (+173 more)
backend/magnet_api/: .env.example  alembic.ini  conftest.py  magnet_app.db  pyproject.toml
backend/magnet_api/alembic/: env.py
backend/magnet_api/alembic/versions/: 0666c547e851_add_sync_fields.py
backend/magnet_api/app/: main.py
backend/magnet_api/tests/: test_offline.py
changelog-cn/: index.html
(+252 files in other folders)
